@@ -269,6 +269,8 @@ $pgv_lang["HIDE_LIVE_PEOPLE"]			= "Lebende Personen verbergen";
 $pgv_lang["HIDE_LIVE_PEOPLE_help"]		= "~#pgv_lang[HIDE_LIVE_PEOPLE]#~<br /><br />Diese Option dient dazu, Daten lebender Personen gewöhnlichen Besuchern zu verbergen. Lebende sind Personen mit Ereignissen die vor weniger als #GLOBAL[MAX_ALIVE_AGE]# stattfanden, und die auch keine Kinder haben, die vor weniger als #GLOBAL[MAX_ALIVE_AGE]# Jahren geboren wurden.<br />";
 $pgv_lang["REQUIRE_AUTHENTICATION"]		= "Besucher Login notwendig";
 $pgv_lang["REQUIRE_AUTHENTICATION_help"]	= "~#pgv_lang[REQUIRE_AUTHENTICATION]#~<br /><br />Wenn diese Einstellung aktiv ist, muss sich ein Besucher erst anmelden, bevor ihm irgendwelche Daten dieser Seite gezeigt werden.<br />";
+$pgv_lang["PAGE_AFTER_LOGIN"]			= "Nach dem Anmelden zu zeigende Seite";
+$pgv_lang["PAGE_AFTER_LOGIN_help"]		= "~#pgv_lang[PAGE_AFTER_LOGIN]#~<br /><br />Welche Seite soll dem Nutzer nach dessen Anmeldung gezeigt werden?<br /><br />Ihre Wahl bestimmt, ob nach dem Anmelden von der #pgv_lang[welcome_page]# die #pgv_lang[welcome_page]# oder die #pgv_lang[mygedview]# Seite gezeigt wird.<br /><br />Wenn der Nutzer sich von einer anderen Seite anmeldet, kehrt Er dahin zurück.<br />";
 $pgv_lang["WELCOME_TEXT_AUTH_MODE"]		= "Begrüßungstext auf der Login-Seite";
 $pgv_lang["WELCOME_TEXT_AUTH_MODE_help"]	= "~#pgv_lang[WELCOME_TEXT_AUTH_MODE]#~<br /><br />Hier können Sie einen Text wählen, der auf der Login-Seite erscheint. Bitte prüfen Sie welcher vordefinierte Text am geeignesten ist.<br /><br />Sie können auch Ihren eigenen Willkommens-Text erstellen, aber dieser wird nicht in die anderen Sprachen übersetzt, es sei denn, dass Ihr Text Verweise auf Sprach-Variable enthält, die Sie in die verschiedenen <i>languages/extra.xx.php</i> Sprach-Dateien eingegeben haben.  Sie können im Hilfe-Text des <b>#pgv_lang[WELCOME_TEXT_AUTH_MODE_CUST]#</b> Feldes mehr darüber erfahren.<br /><br />Die vordefinierten Texte lauten:<ul><li><b>#pgv_lang[WELCOME_TEXT_AUTH_MODE_OPT1]#:</b><div class=\"list_value_wrap\">#pgv_lang[welcome_text_auth_mode_1]#</div><br/></li><li><b>#pgv_lang[WELCOME_TEXT_AUTH_MODE_OPT2]#:</b><div class=\"list_value_wrap\">#pgv_lang[welcome_text_auth_mode_2]#</div><br/></li><li><b>#pgv_lang[WELCOME_TEXT_AUTH_MODE_OPT3]#:</b><div class=\"list_value_wrap\">#pgv_lang[welcome_text_auth_mode_3]#</div></li></ul>";
 $pgv_lang["WELCOME_TEXT_AUTH_MODE_OPT0"]	= "Kein vordefinierter Text";
